<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="Home" />
    <item
        android:id="@+id/nav_sessions"
        android:icon="@drawable/ic_sessions"
        android:title="My Sessions" />
    <item
        android:id="@+id/nav_bookings"
        android:icon="@drawable/ic_bookings"
        android:title="Bookings" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="Profile" />
</menu> 